# -*- makefile -*-

#noinst_LTLIBRARIES = liblinguistic.la
lib_LTLIBRARIES = liblinguistic.la

EXTRA_DIST = lsentence.cpp transfer.cpp transfer.h 1_readme.txt

liblinguistic_la_SOURCES = bossentenceunit.cpp \
  companybuilder.cpp \
  companycode.cpp \
  compositeword.cpp \
  constantsentenceunit.cpp \
  context.cpp \
  contextualunit.cpp \
  diagnostic.cpp \
  entrybuilder.cpp \
  french.cpp \
  functionconstantsentenceunit.cpp \
  insertedsentenceunit.cpp \
  italian.cpp \
  languagebuilder.cpp \
  ldictionary.cpp \
  ldictionaryentry.cpp \
  ldictionarytoken.cpp \
  ldocument.cpp \
  lenglish.cpp \
  lgerman.cpp \
  linflection.cpp \
  lingistictoken.cpp \
  linguisticfactory.cpp \
  linkedtargetunit.cpp \
  linkexception.cpp \
  llanguage.cpp \
  lookuptokentype.cpp \
  lportuguese.cpp \
  lroot.cpp \
  lsemantosyntacticunit.cpp \
  lspanish.cpp \
  lsubjectmatter.cpp \
  lsyntaxunit.cpp \
  ltextualcomponent.cpp \
  luntranslatedsentence.cpp \
  lword.cpp \
  lwordmarkup.cpp \
  noninflectingwordcache.cpp \
  nounphraseunit.cpp \
  prissufilter.cpp \
  punctuationconstantsentenceunit.cpp \
  punctuationsentenceunit.cpp \
  sentenceexception.cpp \
  sentencemarkup.cpp \
  sentenceunit.cpp \
  sourcesentenceunit.cpp \
  subjectmatterbuilder.cpp \
  swork.cpp \
  sworkbase.cpp \
  targetdictionaryunit.cpp \
  targetsentenceunit.cpp \
  targetunitbuilder.cpp \
  translatedsentenceunit.cpp \
  translationobject.cpp \
  unfoundsentenceunit.cpp \
  unfoundsourceunit.cpp \
  untranslatedsentenceunit.cpp \
  blackhole.h \
  interface.h \
  bossentenceunit.h \
  companybuilder.h \
  companycode.h \
  compositeword.h \
  constantsentenceunit.h \
  context.h \
  contextualunit.h \
  diagnostic.h \
  entrybuilder.h \
  french.h \
  functionconstantsentenceunit.h \
  insertedsentenceunit.h \
  italian.h \
  languagebuilder.h \
  ldictionary.h \
  ldictionaryentry.h \
  ldictionarytoken.h \
  ldocument.h \
  lenglish.h \
  lgerman.h \
  linflection.h \
  linguistictoken.h \
  linguisticfactory.h \
  linkedtargetunit.h \
  linkexception.h \
  llanguage.h \
  lookuptokentype.h \
  lportuguese.h \
  lroot.h \
  lsemantosyntacticunit.h \
  lspanish.h \
  lsubjectmatter.h \
  lsyntaxunit.h \
  ltextualcomponent.h \
  luntranslatedsentence.h \
  lword.h \
  lwordmarkup.h \
  noninflectingwordcache.h \
  nounphraseunit.h \
  prissufilter.h \
  punctuationconstantsentenceunit.h \
  punctuationsentenceunit.h \
  sentenceexception.h \
  sentencemarkup.h \
  sentenceunit.h \
  sourcesentenceunit.h \
  subjectmatterbuilder.h \
  swork.h \
  sworkbase.h \
  targetdictionaryunit.h \
  targetsentenceunit.h \
  targetunitbuilder.h \
  translatedsentenceunit.h \
  translationobject.h \
  unfoundsentenceunit.h \
  unfoundsourceunit.h \
  untranslatedsentenceunit.h \
  lsentence.h

#  resdapter.cpp   # went to: lgs_resdll
