# -*- makefile -*-

lib_LTLIBRARIES = libmultithreadlib.la

libmultithreadlib_la_SOURCES = basethread.cpp comminterface.cpp \
	unixupipes.cpp unixthread.cpp basethread.h comminterface.h \
	unixupipes.h unixthread.h critsection.h unixcritsect.h \
	lgscomminterface.h lgscritsect.h lgsthread.h lgsthrlocalstore.h \
	unixthrlocalstore.h
